<resources>
    <string name="app_name">PARKIN</string>
    <string name="park_in">PARK-IN</string>
    <string name="todo">TODO</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="ingrese_el_n_mero_de_tarjeta">Ingrese el número de tarjeta</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento</string>
    <string name="mm_aa">(MM/AA)</string>
    <string name="cvv">CVV</string>
    <string name="cvvv">CVV</string>
    <string name="nombre_del_titular">Nombre del titular</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="pagar">Pagar</string>
    <string name="todoo">TODO</string>
    <string name="todooo">TODO</string>
    <string name="todos">TODO</string>
    <string name="park_ina">PARK-IN</string>
    <string name="todo2">TODO</string>
    <string name="a_d_nde_vamos">¿A dónde vamos?</string>
    <string name="estado">Estado</string>
    <string name="ciudad">Ciudad</string>
    <string name="colonia_opcional">Colonia (opcional)</string>
    <string name="buscar">Buscar</string>
    <string name="todo1">TODO</string>
    <string name="todod">TODO</string>
    <string name="park_inq">PARK-IN</string>
    <string name="qwe">TODO</string>
    <string name="calle">Calle</string>
    <string name="qweqew">#</string>
    <string name="coloniae">Colonia</string>
    <string name="qwea">Ciudad</string>
    <string name="estadod">Estado</string>
    <string name="espacios_de_auto">Espacios de auto</string>
    <string name="precio_por_hora">Precio por hora</string>
    <string name="espacios_de_moto">Espacios de moto</string>
    <string name="precio_por_horav">Precio por hora</string>
    <string name="confirmar">Confirmar</string>
    <string name="subir_comprobante">Subir comprobante</string>
    <string name="todoads">TODO</string>
    <string name="asda">TODO</string>
    <string name="asd">TODO</string>
    <string name="asdasdad">TODO</string>
    <string name="asdzxc">TODO</string>
    <string name="c">Sube documentos que comprueben que la propiedad es tuya</string>
    <string name="m">PARK-IN</string>
    <string name="descripci_n_del_spot">DESCRIPCIÓN DEL SPOT</string>
    <string name="z">TODO</string>
    <string name="dsda">TODO</string>
    <string name="direcci_n_del_spot">Dirección del spot</string>
    <string name="espacios_de_autom_vil">Espacios de automóvil:</string>
    <string name="_1">1</string>
    <string name="asdc">Precio por hora:</string>
    <string name="_100">$100</string>
    <string name="espacios_de_bicicletas">Espacios de bicicletas:</string>
    <string name="ads">1</string>
    <string name="vbb">Precio por hora:</string>
    <string name="_20">$20</string>
    <string name="b">TODO</string>
    <string name="vcb">TODO</string>
    <string name="dcsav">TODO</string>
    <string name="acxz">TODO</string>
    <string name="asfvcx">TODO</string>
    <string name="xczzxc">TODO</string>
    <string name="v">PARK-IN</string>
    <string name="cvzxvb">TODO</string>
    <string name="solicitud">SOLICITUD</string>
    <string name="n_mero_de_veh_culos_que_ingresan">Número de vehículos que ingresan:</string>
    <string name="hora_de_entrada">Hora de entrada:</string>
    <string name="hora_de_salida">Hora de salida:</string>
    <string name="notas">Notas:</string>
    <string name="cp">$CP</string>
    <string name="bp">$BP</string>
    <string name="mj">TODO</string>
    <string name="ñ">TODO</string>
    <string name="poó">Pagar</string>
    <string name="ver_en_mapa">Ver en Mapa</string>
    <string name="nb">TODO</string>
    <string name="cvb">TODO</string>
    <string name="cx">PARK-IN</string>
    <string name="zdsg">TODO</string>
    <string name="nombre_juanito_alima_a">Nombre: Juanito Alimaña</string>
    <string name="edad_23_a_os">Edad: 23 años</string>
    <string name="correo_alejandro_hotmail_com">Correo: alejandro@hotmail.com</string>
    <string name="ubicaci_n_m_xico">Ubicación: México</string>
    <string name="A">Teléfono: 92117217718</string>
    <string name="vehiculo_toyota_yaris_2020">Vehiculo: Toyota Yaris 2020</string>
    <string name="YRTEY">TODO</string>
    <string name="RET34">TODO</string>
    <string name="QWER">PARK-IN</string>
    <string name="T">TODO</string>
    <string name="TRE">Nombre: Juanito Alimaña</string>
    <string name="RWET">Edad: 23 años</string>
    <string name="BVN">Correo: alejandro@hotmail.com</string>
    <string name="VCX">Ubicación: México</string>
    <string name="tel_fono_92117217718">Teléfono: 92117217718</string>
    <string name="spots_4">Spots: 4</string>
    <string name="a_adir">Añadir</string>
    <string name="ASD">TODO</string>
    <string name="CZV">TODO</string>
    <string name="ASDZX">PARK-IN</string>
    <string name="B">TODO</string>
    <string name="mis_spots">MIS SPOTS</string>
    <string name="ASCXXZ">TODO</string>
    <string name="AV">TODO</string>
    <string name="ZCX">Nombre Completo</string>
    <string name="D">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="reescribe_la_contrase_a">Reescribe la contraseña</string>
    <string name="propietario">Propietario</string>
    <string name="usuario">Usuario</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="eres_propietario_o_usuario">¿Eres propietario o usuario?</string>
    <string name="tel_fono">Teléfono</string>
    <string name="AS">PARK-IN</string>
    <string name="XC">TODO</string>
    <string name="CVB">TODO</string>
    <string name="PO">Dirección del spot</string>
    <string name="horario_14_40_15_00">Horario: 14:40 - 15:00</string>
    <string name="fecha_20_20_2023">Fecha: 20/20/2023</string>
    <string name="lleg">Llegó</string>
    <string name="sali">Salió</string>
    <string name="cancelar">Cancelar</string>
    <string name="mis_tickets">MIS TICKETS</string>
    <string name="U">TODO</string>
    <string name="BM">TODO</string>
    <string name="H">PARK-IN</string>
    <string name="G">TODO</string>
    <string name="opciones">OPCIONES</string>
    <string name="F">TODO</string>
    <string name="TJ">TODO</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="KLY">TODO</string>
    <string name="ingresa_el_email">Ingresa el email</string>
    <string name="ingresa_la_contrase_a">Ingresa la contraseña</string>
    <string name="email">Email:</string>
    <string name="ASQ">Contraseña:</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="title_activity_camera">Camera</string>
    <string name="tickets">Tickets</string>
</resources>