<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiPerfilPropietario">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:text="@string/QWER"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="346dp"
            android:layout_height="547dp"
            app:cardBackgroundColor="#C1D9D9"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <!-- Contenido del rectángulo aquí -->


            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/profilemen"
                android:contentDescription="@string/T" />

            <androidx.cardview.widget.CardView
                android:layout_width="260dp"
                android:layout_height="310dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="200dp"
                app:cardBackgroundColor="#D1D9D9"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                tools:ignore="TextSizeCheck">

                <!-- Contenido del rectángulo aquí -->

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/TRE"
                    android:textColor="#455A64"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/RWET"
                    android:textColor="#455A64"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/correo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/BVN"
                    android:textColor="#455A64"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ubicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="160dp"
                    android:text="@string/VCX"
                    android:textColor="#455A64"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="240dp"
                    android:text="@string/tel_fono_92117217718"
                    android:textColor="#455A64"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/spots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="200dp"
                    android:text="@string/spots_4"
                    android:textColor="#455A64"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_AgregarSpot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="190dp"
                    android:backgroundTint="#609E43"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/a_adir"
                    android:textColor="#212121" />
            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <ImageView
        android:id="@+id/btn_ticketsPropietario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/entradas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        android:contentDescription="@string/ASD" />

    <ImageView
        android:id="@+id/btn_MisSpots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circuloplus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        android:contentDescription="@string/CZV" />


</androidx.constraintlayout.widget.ConstraintLayout>