<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketsCliente">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:text="@string/H"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />


    <ImageView
        android:id="@+id/btn_Profile"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:src="@drawable/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        android:contentDescription="@string/G" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView"
            android:layout_width="346dp"
            android:layout_height="547dp"
            app:cardBackgroundColor="#C1D9D9"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="50dp"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:id="@+id/cardContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- No es necesario agregar ninguna tarjeta estática aquí -->

                </LinearLayout>

            </ScrollView>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:text="@string/tickets"
                android:textColor="#000000"
                android:textSize="30sp" />


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <ImageView
        android:id="@+id/btn_ticketsUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/entradas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        android:contentDescription="@string/TJ" />

    <ImageView
        android:id="@+id/btn_ADondeVamos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circuloplus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        android:contentDescription="@string/F" />
</androidx.constraintlayout.widget.ConstraintLayout>